--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 /*
-   * typography
-   *   注) table は定義していない
-   */
+* typography
+*   注) table は定義していない
+*/
+/** New Tegomin */
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
+/** Noto Sans JP */
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&family=Noto+Sans+JP:wght@100&display=swap');
+/** Shippori Mincho */
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&family=Noto+Sans+JP:wght@100&family=Shippori+Mincho:wght@500&display=swap');
+
 body {
   background-color: #fef8e7;
   color: #2f3846;
   line-height: 1.7;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Shippori Mincho', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /** ハイフン */
@@ -18,6 +25,7 @@ body {
   /** 特殊な文字 */
   font-variant-ligatures: common-ligatures;
   font-kerning: none;
+  margin: 0;
 
   @media screen and (min-width: 60em) {
     body {
