--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,12 @@ body {
 
 /** 要素のフォントサイズ */
 h1 {
-  font-size: calc(0.5rem + 2.8vmin);
+  font-size: calc(0.8rem + 2.8vmin);
   line-height: 1;
   font-variant-numeric: lining-nums;
 }
 h2 {
-  font-size: calc(0.5rem + 2.5vmin);
+  font-size: calc(0.8rem + 2.5vmin);
   line-height: 1.1;
   font-variant-numeric: lining-nums;
 }
@@ -165,7 +165,8 @@ blockquote::after {
 
 /** 記事レイアウト */
 article {
-  max-width: 38em;
+  width: 100%;
+  max-width: min(38em, calc(100% - 48px));
   margin-left: auto;
   margin-right: auto;
 }
