--- a/src/index.css
+++ b/src/index.css
@@ -42,24 +42,25 @@ body {
 
 /** 要素のフォントサイズ */
 h1 {
-  font-size: calc(0.8rem + 2.8vmin);
+  font-size: calc(0.8rem + 3.2vmin);
   line-height: 1;
   font-variant-numeric: lining-nums;
+  text-align: center;
 }
 h2 {
-  font-size: calc(0.8rem + 2.5vmin);
+  font-size: calc(0.5rem + 2.3vmin);
   line-height: 1.1;
   font-variant-numeric: lining-nums;
 }
 h3 {
-  font-size: calc(0.5rem + 2.3vmin);
+  font-size: calc(1rem + 0.6vmin);
   line-height: 1.2;
   font-variant-numeric: lining-nums;
 }
 h4,
 h5,
 h6 {
-  font-size: calc(0.5rem + 2.1vmin);
+  font-size: calc(1rem +0.3vmin);
   line-height: 1.3;
   font-variant-numeric: lining-nums;
 }
@@ -191,6 +192,17 @@ aside {
     margin-left: -5em;
     margin-top: 0;
   }
+}
+article details {
+  margin-top: 1.125em;
+}
+article details > p {
+  font-size: 0.9em;
+  margin-left: 2.25em;
+  margin-bottom: 0;
+}
+article details > p + p {
+  margin-top: 0.5625em;
 }
 
 code {
